--- a/rock-paper-scissors.html
+++ b/rock-paper-scissors.html
@@ -1,141 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title>Rock Paper Scissor</title>
+
+    <link rel="stylesheet" href="rps.css"> 
   </head>
 
 
   <body>
-    <p>Rock Paper Scissors</p>
+    <p class="title">Rock Paper Scissors</p>
     <button onclick="
       playGame('rock');
-    ">Rock</button>
+    " class="move-button"><img src="images/rock-emoji.png" class="move-icon"></button>
 
     <button onclick="
       playGame('paper');
-    ">Paper</button>
+    " class="move-button"><img src="images/paper-emoji.png" class="move-icon"></button>
 
     <button onclick="
-      playGame('scissor');
-    ">Scissor</button>
+      playGame('scissors');
+    " class="move-button"><img src="images/scissors-emoji.png" class="move-icon"></button>
 
-    <p class="js-result"></p>
+    <p class="js-result result"></p>
 
-    <p class="js-moves"></p>
+    <p class="js-moves">
 
-    <p class="js-score"></p>
+    <p class="js-score score"></p>
 
     <button onclick="
       resetScore();
-    ">Reset Score</button>
+    " class="reset-score-button">Reset Score</button>
 
-    <script> 
-      let score = JSON.parse(localStorage.getItem('score'));
-
-      if (score === null){ 
-        score = {
-          wins: 0,
-          losses:0,
-          ties:0
-        };
-        localStorage.setItem('score', JSON.stringify(score));
-
-      }
-
-      updateScoreElement();
-
-      function playGame(playerMove){
-        score = JSON.parse(localStorage.getItem('score'));
-        const computerMove = pickComputerMove();
-
-        let result = '';
-
-        if (playerMove === 'scissor') {
-          if (computerMove === 'rock') {
-            result = 'You Lose';
-          } else if (computerMove === 'paper') {
-            result = 'You Win';
-          } else if (computerMove === 'scissor') {
-            result = 'Tie';
-          }
-        } else if (playerMove === 'rock') {
-          if (computerMove === 'rock') {
-            result = 'Tie';
-          } else if (computerMove === 'paper') {
-            result = 'You Lose';
-          } else if (computerMove === 'scissor') {
-            result = 'You Win';
-          }
-        } else if (playerMove === 'paper') {
-          if (computerMove === 'rock') {
-            result = 'You Win';
-          } else if (computerMove === 'paper') {
-            result = 'Tie';
-          } else if (computerMove === 'scissor') {
-            result = 'You Lose';
-          }
-        }
-
-        if (result === 'You Win') {
-          score.wins += 1;
-        } else if (result === 'You Lose') {
-          score.losses += 1;
-        } else if (result === 'Tie') {
-          score.ties += 1;
-        }
-
-        localStorage.setItem('score', JSON.stringify(score)); 
-        updateResultElement(result);
-
-        updateScoreElement();
-
-        updateMoves(playerMove, computerMove);
-        
-      }
-
-      function updateScoreElement() {
-        document.querySelector('.js-score')
-          .innerText = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-      }
-
-      function pickComputerMove() {
-        const randomNumber = Math.random();
-
-        let computerMove = '';
-
-        if (randomNumber >= 0 && randomNumber < 1/3) {
-          computerMove = 'rock';
-        } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-          computerMove = 'paper';
-        } else if (randomNumber >= 2/3 && randomNumber < 1) {
-          computerMove = 'scissor';
-        }
-
-        return computerMove;
-      }
-
-      function updateResultElement(resultElement) {
-        document.querySelector('.js-result')
-          .innerHTML = `${resultElement}`;
-      }
-
-      function updateMoves(playerMove, computerMove) {  
-        document.querySelector('.js-moves')
-          .innerHTML = `You picked ${playerMove} & Computer picked ${computerMove}.`;
-      }
-
-      function resetScore() {
-        localStorage.removeItem('score');
-        score = {
-          wins: 0,
-          losses:0,
-          ties:0
-        };
-        localStorage.setItem('score', JSON.stringify(score));
-        updateScoreElement();
-      }
-
-    </script>
+    <script src="rps.js"></script>
 
   </body>
 
